
All notable changes to this project will be documented in this file.
This project adheres to [[http://semver.org][Semantic Versioning]].

* [[https://github.com/ryuslash/yoshi-theme/compare/v6.0.0...HEAD][Unreleased]]
** ADDED Some helm faces

   Add the helm faces: =helm-M-x-key=, =helm-buffer-directory=,
   =helm-buffer-file=, =helm-buffer-not-saved=, =helm-buffer-process=,
   =helm-buffer-size=, =helm-match=, =helm-selection= and
   =helm-source-header=.

** ADDED Some circe faces

   Add the circe faces: =circe-highlight-nick-face= and
   =circe-server-face=.

** ADDED Some lui faces

   Add the lui faces: =lui-button-face=, =lui-time-stamp-face=.

* [[https://github.com/ryuslash/yoshi-theme/compare/v5.13.0...v6.0.0][6.0.0]] -- 2015-08-31

** ADDED =js2-function-param= face.

** ADDED =magit-log-head-label-head= face.

** ADDED =magit-log-head-label-default= face.

** ADDED Some hydra faces.

   Add the =hydra-face-amaranth=, =hydra-face-blue=, =hydra-face-pink=,
   =hydra-face-red= and =hydra-face-teal= faces.

** ADDED Some magit faces.

   Magit came out with a new version and changed (almost) all the face
   names. The following faces have been added because of this:
   =magit-bisect-bad=, =magit-bisect-good=, =magit-bisect-skip=,
   =magit-blame-date=, =magit-blame-hash=, =magit-blame-heading=,
   =magit-blame-name=, =magit-blame-summary=, =magit-branch-current=,
   =magit-branch-local=, =magit-branch-remote=, =magit-diff-added=,
   =magit-diff-added-highlight=, =magit-diff-context=,
   =magit-diff-context-highlight=, =magit-diff-file-heading=,
   =magit-diff-removed=, =magit-diff-removed-highlight=, =magit-process-ng=,
   =magit-process-ok=, =magit-section-heading=.

** ADDED =erc-button= face.

** CHANGED Change faces to stop using certain colors.

** CHANGED Change =gnus-signature= foreground to =fgdim=.

** CHANGED Change =message-header-xheader= foreground to =fgdim= and make it italic.
