@@ -165,6 +165,12 @@
    `(helm-buffer-not-saved ((t (:foreground ,fgcyan))))
    `(helm-buffer-process ((t (:foreground ,fggreen))))
    `(helm-buffer-size ((t (:foreground ,fgorange))))
+   `(helm-ff-directory ((t (:foreground ,fgblue :background unspecified))))
+   `(helm-ff-dotted-directory ((t (:foreground unspecified :background unspecified :inherit helm-ff-directory))))
+   `(helm-ff-executable ((t (:foreground ,fggreen))))
+   `(helm-ff-file ((t (:inherit default))))
+   `(helm-ff-invalid-symlink ((t (:foreground ,fgred :background unspecified))))
+   `(helm-ff-symlink ((t (:foreground ,fgcyan))))
    `(helm-match ((t (:foreground ,fgbright :weight bold))))
    `(helm-selection ((t (:distant-foreground unspecified :background ,bgblue))))
    `(helm-source-header ((t (:font-family unspecified :height 1.1 :weight bold :foreground ,fgturquoise :background unspecified))))
